[gd_scene load_steps=4 format=3 uid="uid://bvx88vveqhxcd"]

[ext_resource type="Script" uid="uid://ewnhgf1tfkkt" path="res://scripts/quiz_ui.gd" id="1_501xa"]
[ext_resource type="FontFile" uid="uid://cnx6gh6imbjtv" path="res://fonts/Retro Gaming.ttf" id="2_4vc25"]
[ext_resource type="AudioStream" uid="uid://piytlpiodu8y" path="res://soundfx/Carl Orff - O Fortuna ~ Carmina Burana.mp3" id="3_topby"]

[node name="QuizUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_501xa")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 350.0
offset_top = 300.0
offset_right = 532.0
offset_bottom = 457.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="QuestionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4vc25")

[node name="AnswerButton1" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4vc25")

[node name="AnswerButton2" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4vc25")

[node name="AnswerButton3" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4vc25")

[node name="FeedbackLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4vc25")

[node name="NextQuestionButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4vc25")
text = "SÄ±radaki Soru"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_topby")
